Updated to minecraft 1.21. Code reformat. Removed gametest framework