@@ -1,14 +1,14 @@
 package com.voinearadu.commandmanager.velocity.command;
 
+import com.velocitypowered.api.command.CommandSource;
+import com.velocitypowered.api.command.SimpleCommand;
+import com.velocitypowered.api.proxy.ConsoleCommandSource;
+import com.velocitypowered.api.proxy.Player;
 import com.voinearadu.commandmanager.common.command.CommonCommand;
 import com.voinearadu.commandmanager.common.manager.CommonCommandManager;
 import com.voinearadu.commandmanager.common.utils.ListUtils;
 import com.voinearadu.commandmanager.velocity.manager.VelocityCommandManager;
 import com.voinearadu.logger.Logger;
-import com.velocitypowered.api.command.CommandSource;
-import com.velocitypowered.api.command.SimpleCommand;
-import com.velocitypowered.api.proxy.ConsoleCommandSource;
-import com.velocitypowered.api.proxy.Player;
 import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -133,7 +133,7 @@ public abstract class VelocityCommand extends CommonCommand implements SimpleCom
             return;
         }
 
-        Logger.error("Unknown command sender type: " + sender.getClass().getName() + " for command: " + getAliases().get(0));
+        Logger.error("Unknown command sender type: " + sender.getClass().getName() + " for command: " + getAliases().getFirst());
     }
 
     protected List<String> recommendPlayersList() {
